[gd_scene load_steps=7 format=3 uid="uid://btw6veelnkhxu"]

[ext_resource type="StyleBox" uid="uid://bs4e4t3pcwhrl" path="res://Assets/generic_button_style.tres" id="1_5ceyu"]
[ext_resource type="Script" uid="uid://don3i0nv0iiev" path="res://Scripts/pages/menu_inicial.gd" id="1_ehsm6"]
[ext_resource type="Script" uid="uid://bmprpavgphjq7" path="res://Scripts/pages/menu_inicial_path_2d.gd" id="3_cd2g1"]

[sub_resource type="LabelSettings" id="LabelSettings_el575"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_xfb46"]
font_size = 99

[sub_resource type="Curve2D" id="Curve2D_fu1st"]
_data = {
"points": PackedVector2Array(107.321, 172.168, -107.321, -172.168, -29.1492, -215.004, -95.0533, -329.549, 95.0533, 329.549, -294.238, -13.6001)
}
point_count = 2

[node name="Menu_inicial" type="Control"]
layout_mode = 3
anchor_right = 1.0026
anchor_bottom = 0.998476
offset_left = 4.0
offset_right = 4.0
script = ExtResource("1_ehsm6")
metadata/_edit_use_anchors_ = true

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0129871
anchor_top = 0.318386
anchor_right = 0.471863
anchor_bottom = 0.721779
theme_override_constants/separation = 18
metadata/_edit_use_anchors_ = true

[node name="Jogar" type="Button" parent="buttons"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 37
theme_override_styles/hover = ExtResource("1_5ceyu")
theme_override_styles/normal = ExtResource("1_5ceyu")
text = "Jogar
"
metadata/_edit_use_anchors_ = true

[node name="Sair_do_jogo" type="Button" parent="buttons"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 37
theme_override_styles/hover = ExtResource("1_5ceyu")
theme_override_styles/normal = ExtResource("1_5ceyu")
text = "Sair do jogo"
metadata/_edit_use_anchors_ = true

[node name="Baralho_atual" type="Label" parent="buttons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "{baralho atual == baralho_nome}"
label_settings = SubResource("LabelSettings_el575")
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 3
metadata/_edit_use_anchors_ = true

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00779224
anchor_top = 0.0185468
anchor_right = 0.811259
anchor_bottom = 0.227199
offset_bottom = -3.05176e-05
text = "Saúde tem História"
label_settings = SubResource("LabelSettings_xfb46")
autowrap_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Baralho_atual2" type="Label" parent="."]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
anchor_left = 0.00346322
anchor_top = 0.927339
anchor_right = 0.461474
anchor_bottom = 0.992253
text = "Versão de testes!"
label_settings = SubResource("LabelSettings_el575")
autowrap_mode = 3
max_lines_visible = 3
metadata/_edit_use_anchors_ = true

[node name="helper" type="Control" parent="."]
anchors_preset = 0
anchor_left = 1.04849
anchor_top = 1.03553
anchor_right = 1.08312
anchor_bottom = 1.09735
offset_bottom = 6.10352e-05
metadata/_edit_use_anchors_ = true

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(1207, 670.001)
scale = Vector2(1.81826, 1.54416)
curve = SubResource("Curve2D_fu1st")
script = ExtResource("3_cd2g1")

[connection signal="resized" from="." to="Path2D" method="_on_menu_inicial_resized"]
[connection signal="pressed" from="buttons/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="buttons/Sair_do_jogo" to="." method="_on_sair_do_jogo_pressed"]
